// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders on mac 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: var(--echoes-color-text-subdued);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="sw-flex sw-gap-1"
    >
      <span
        class=" emotion-2 emotion-3"
      >
        ⌘
      </span>
      <span
        class=" emotion-2 emotion-3"
      >
        ⌥
      </span>
    </div>
  </div>
</div>
`;

exports[`renders on windows 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: var(--echoes-color-text-subdued);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="sw-flex sw-gap-1"
    >
      <span
        class=" emotion-2 emotion-3"
      >
        Ctrl
      </span>
      <span
        class=" emotion-2 emotion-3"
      >
        Alt
      </span>
    </div>
  </div>
</div>
`;

exports[`renders with command 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: var(--echoes-color-text-subdued);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="sw-flex sw-gap-1"
    >
      <span
        class="sw-px-1 emotion-2 emotion-3"
      >
        command
      </span>
    </div>
  </div>
</div>
`;

exports[`renders with title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: var(--echoes-color-text-subdued);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <span
      class="sw-truncate"
    >
      title
    </span>
    <div
      class="sw-flex sw-gap-1"
    >
      <span
        class=" emotion-2 emotion-3"
      >
        click
      </span>
    </div>
  </div>
</div>
`;

exports[`renders without title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: var(--echoes-color-text-subdued);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="sw-flex sw-gap-1"
    >
      <span
        class=" emotion-2 emotion-3"
      >
        click
      </span>
    </div>
  </div>
</div>
`;
